<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:src="@drawable/kulo"
        app:civ_border_color="?attr/colorPrimary"
        app:civ_border_width="3dp" />

    <TextView
        android:id="@+id/myName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/nama"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/myNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/nim"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/myMajorClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/majorClass"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/myFaculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/faculty"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/myUniv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/univ"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/myEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/share"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
